# SignalArk

./: .dockerignore  .env.docker  .env.example  .gitignore  Makefile  README.md  ai-quant-trading-architecture.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/api/: main.py  (+2 more)
configs/: base.yaml  dev.yaml
docker/: nginx.conf  python.Dockerfile  web-entrypoint.sh  web.Dockerfile
migrations/: README.md  alembic.ini  env.py
scripts/: __init__.py  replay_events.py  run_dev_stack.sh
src/: __init__.py
tests/: conftest.py
todo/: 2026-04-02-project-todo.md  2026-04-03-functional-todo.md  2026-04-10-backtest-strategy-optimization-todo.md  2026-04-14-front-configurable-ma-backtest-todo.md
v1-ai-execution-phases/: 00-master-plan.md  README.md  implementation-decisions.md  phase-0-scope-and-config.md  phase-1-domain-model.md  phase-2-db-and-persistence.md  phase-2a-db-schema-and-migration-draft.md  phase-3-collector-and-market-gateway.md  phase-4-trader-loop-and-event-bus.md  phase-5-oms-and-paper-execution.md  phase-5a-oms-persistence-and-state-machine.md  phase-5b-paper-execution-adapter.md  phase-5c-portfolio-balance-and-pnl.md  phase-6-risk-and-control-plane.md  phase-6a-pretrade-risk-rules.md  phase-6b-api-and-operator-controls.md  phase-6c-alerting-and-safety-ops.md  phase-7-baseline-strategy.md  phase-8-backtest-minimum.md  phase-9-reconciliation-and-protection.md  prompts.md  testing-standards.md
v2/: 00-master-plan.md  00-scope-draft.md  README.md  phase-0-boundaries-and-shared-contracts.md  phase-1-frontend-usability-and-symbol-management.md  (+4 more)
(+194 files in other folders)
