[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalark"
version = "0.1.0"
description = "SignalArk V1 paper-trading scaffold"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=25.2,<26.0",
  "tenacity>=9.0,<10.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "src*"]

